5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1756_1580.log
== TEST (2019-05-22 15:20:30) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<l):
	if(n>=6):
		h=h+1
	elif(n==-1):
		m=m+1
	else:
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:20:38) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<l):
	if(n>=6):
		h=h+1
	elif(n==-1):
		m=m+1
	else:
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:21:47) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<l):
	if(n>=6):
		h=h+1
	elif(n==-1):
		m=m+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:22:29) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n>=6):
		h=h+1
	elif(n==-1):
		m=m+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:23:04) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(l)):
	if(n>=6):
		h=h+1
	elif(n==-1):
		m=m+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:23:45) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(l)):
	if(n==-1):
		m=m+1
		
	elif(n>=6):
		h=h+1
	
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:24:53) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>=6):
		h=h+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:25:37) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>=6):
		h=h+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- EXECUTION TIME:
0.530636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 10, in <module>
    if(n==-1):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:25:38) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>=6):
		h=h+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:27:01) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):

	elif(n>=6):
		h=h+1
	elif(n<6):
		j=j+(h-m)
	i=i+1
print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 11
    elif(n>=6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:04) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	if(n>=6)
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 12
    if(n>=6)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:10) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	if(n>6)
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 12
    if(n>6)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:16) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>6)
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 12
    elif(n>6)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:23) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>6):
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:28) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>6):
		
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
File "XXXX", line 14
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:40) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>6):
		h=h+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:47) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	elif(n>=6):
		h=h+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:32:31) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:32:56) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:35:29) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(string(l)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:35:57) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i<size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:37:15) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i!=size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:37:34) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i!=size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:38:33) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))
m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados

i=0
while(i!=size(n)):
	if(n==-1):
		m=m+1
	else:
		if(n>=6 and n<=10):
			h=h+1
		elif(n>=0 and n<6):
			m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(n)/size(n)),2))
print(max(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:04:59) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes


i=0
while(i<size(n)):
	if(n[i]!=-1 and n[i]>=0):
		p=p+1
	else:
		m=m+1
	i=i+1
i=0
v=zeros(p)
while(i<size(v)):
	if(n[i]>=6):
		h=h+1
	elif(n[i]<6 and n[i]>=0):
		j=j+1
	i=i+1

print(m)
print(h)
print(j)
print(round((sum(v)/size(v)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:16:24) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
		elif(n[i]>=0 and n[i]<6):
			j=j+1
	else:
		m=m+1
	i=i+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:19:31) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
notas=0 #notas

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			notas=notas+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			notas=notas+n[i]
	else:
		m=m+1
	i=i+1
print(m)
print(h)
print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:22:57) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/size(n)),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:24:22) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:29:09) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1
i=0
j=0
while(i!=max(n)):
	i=i+1
l[j]=n[i]
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[j])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:29:52) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(n)=l)

-- ERROR:
File "XXXX", line 30
    print(max(n)=l)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:30:05) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(n)=(l))

-- ERROR:
File "XXXX", line 30
    print(max(n)=(l))
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:30:16) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:30:33) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- EXECUTION TIME:
0.567217
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:30:37) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:32:30) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:32:41) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:34:01) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:34:37) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- EXECUTION TIME:
0.387455
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:36:01) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	else:
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:37:47) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:38:06) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:38:31) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- EXECUTION TIME:
0.405308
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:38:34) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:38:42) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==1):
		m=m+1
	
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:39:48) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:40:05) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- EXECUTION TIME:
0.516621
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:40:18) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:40:45) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	else:
		m=m+0
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- EXECUTION TIME:
0.502798
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:41:23) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:42:21) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:46:53) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:47:06) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1

print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:49:10) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
if(max(n)>0):
	n[i]=l[t]
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:53:31) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n))
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(i)

-- ERROR:
File "XXXX", line 27
    while(i!=max(n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:53:38) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:54:00) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:54:20) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:57:21) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(max(l))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:59:14) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
t=0
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:59:22) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:59:47) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:00:19) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(i!=max(n)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:00:59) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(i!=max(p)):
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:01:41) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:02:13) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
	
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:08:03) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:08:29) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:09:03) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:09:30) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])

-- EXECUTION TIME:
0.515112
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:23:54) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:29:09) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:04) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1):
		p=p+1
		if(n[i]>=6):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:31:05) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1 and n[i]<=10):
		p=p+1
		if(n[i]>=6 and n[i]<=10):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:31:08) 
-- CODE:
from numpy import*
n=array(eval(input("notas:")))
l=array(eval(input("nomes:")))

m=0 #faltaram
h=0 #Aprovados
j=0 #Reprovados
p=0 #presentes
i=0 #contador
n1=0 #notas dos aprovados
n2=0 #notas dos reprovados

while(i<size(n)):
	if(n[i]>-1 and n[i]<=10):
		p=p+1
		if(n[i]>=6 and n[i]<=10):
			h=h+1
			n1=n1+n[i]
			
		elif(n[i]>=0 and n[i]<6):
			j=j+1
			n2=n2+n[i]
	elif(n[i]==-1):
		m=m+1
	i=i+1
i=0
while(n[i]!=max(n)):
	i=i+1
print(m)
print(h)
print(j)
print(round(((n1+n2)/p),2))
print(l[i])
-- EXECUTION TIME:
0.424543
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
